Archive2/e5/0dc9df191b80a2/output
main.cpp:3:1: error: 'vector' does not name a type
 vector< vector<int> > selection(std::vector<int> fitness_vec,vector< vector<int> > P)
 ^
